@@ -1,3 +1,13 @@
+2011-10-20  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
+	tests: avoid spurious failure of 'uninstall-fail.test' on Solaris
+	* tests/uninstall-fail.test: All the Solaris 10 shells (/bin/sh,
+	/bin/ksh, and /usr/xpg4/bin/sh), upon failing to chdir to a
+	directory with the `cd' builtin, print a message like:
+	  "sh: /root: permission denied"
+	which doesn't report the `cd' builtin anywhere.  Relax the grepping
+	of the error message accordingly.
+
 2011-10-19  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
 	tests: avoid spurious failure of 'uninstall-fail.test' on Cygwin
